# embeddenator-context-mcp

./: .gitignore  ASSESSMENT_REPORT.md  BENCHMARK_REAL_DATA_REPORT.md  CHANGELOG.md  CHANGELOG_TERNARY_EMBEDDINGS.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  INSTALL.md  PR_DEPLOYMENT_SUMMARY.md  README.md  RMCP_AUDIT_PLAN.md  TERNARY_EMBEDDINGS_IMPLEMENTATION.md  USAGE_EXAMPLES.md  install.sh  test_mcp_server.py
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: rag_benchmark.rs  storage_benchmark.rs
docs/: ECOSYSTEM_CONTEXT.md
examples/: basic_usage.rs  ternary_rag_demo.rs
src/: context.rs  embeddings.rs  error.rs  gpu.rs  lib.rs  main.rs  protocol.rs  rag.rs  server.rs  storage.rs  temporal.rs  ternary.rs  tools.rs
tests/: integration_test.rs
