[package]
name = "context-mcp"
version = "0.1.6"
edition = "2021"
rust-version = "1.75"
authors = ["Tyler Zervas <tzervas>"]
license = "MIT"
description = "MCP server for context storage, text-based retrieval, and temporal tracking with optional persistence"
repository = "https://github.com/tzervas/context-mcp"
documentation = "https://docs.rs/context-mcp/latest/context_mcp/"
keywords = ["mcp", "rag", "context", "memory", "temporal"]
categories = ["development-tools", "memory-management"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# MCP and async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/WebSocket for MCP
axum = { version = "0.8", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# Storage backends
# In-memory with LRU
lru = "0.16"
# Disk persistence
sled = { version = "0.34", optional = true }
# Optional: vector similarity (can use embeddenator core)
# embeddenator = { path = "../embeddenator", optional = true }

# Hashing and IDs
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"

# Time and temporal reasoning
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CPU optimization
rayon = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Random
rand = "0.9"

# Optional: SIMD for vector operations
# packed_simd = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.8", features = ["async_tokio"] }

# Development tools
cargo-audit = "0.22"
cargo-deny = "0.18"

[features]
default = ["server", "persistence"]
server = ["dep:axum", "dep:tower", "dep:tower-http"]
persistence = ["dep:sled"]
simd = []
embeddings = []

[[bin]]
name = "context-mcp"
path = "src/main.rs"
required-features = ["server"]

[[bench]]
name = "storage_benchmark"
harness = false

[[bench]]
name = "rag_benchmark"
harness = false
